Update .po files

--- a/l10n/po/ja_JP/_versions/main/guides/resteasy-reactive.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/resteasy-reactive.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-03-22 02:37+0000\n"
+"POT-Creation-Date: 2022-03-23 02:40+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -508,8 +508,8 @@ msgstr ""
 #, no-wrap
 msgid ""
 "@Retention(RetentionPolicy.RUNTIME)\n"
-"@HttpMethod(\"FROMAGE\")\n"
-"@interface FROMAGE {\n"
+"@HttpMethod(\"CHEESE\")\n"
+"@interface CHEESE {\n"
 "}\n"
 msgstr ""
 
@@ -517,7 +517,7 @@ msgstr ""
 #: upstream/_versions/main/guides/resteasy-reactive.adoc:198
 #, no-wrap
 msgid ""
-"    @FROMAGE\n"
+"    @CHEESE\n"
 "    public String hello() {\n"
 "        return \"Hello, Cheese World!\";\n"
 "    }\n"
@@ -1357,11 +1357,11 @@ msgid ""
 "        // HTTP OK status with text/plain content type\n"
 "        return ResponseBuilder.ok(\"Hello, World!\", MediaType.TEXT_PLAIN_TYPE)\n"
 "         // set a response header\n"
-"         .header(\"X-FroMage\", \"Camembert\")\n"
+"         .header(\"X-Cheese\", \"Camembert\")\n"
 "         // set the Expires response header to two days from now\n"
 "         .expires(Date.from(Instant.now().plus(Duration.ofDays(2))))\n"
 "         // send a new cookie\n"
-"         .cookie(new NewCookie(\"Flavour\", \"praliné\"))\n"
+"         .cookie(new NewCookie(\"Flavour\", \"chocolate\"))\n"
 "         // end of builder API\n"
 "         .build();\n"
 "    }\n"
@@ -1398,7 +1398,7 @@ msgstr ""
 #, no-wrap
 msgid ""
 "    @ResponseStatus(201)\n"
-"    @ResponseHeader(name = \"X-FroMage\", value = \"Camembert\")\n"
+"    @ResponseHeader(name = \"X-Cheese\", value = \"Camembert\")\n"
 "    @GET\n"
 "    public String hello() {\n"
 "        return \"Hello, World!\";\n"
@@ -2500,7 +2500,7 @@ msgstr ""
 #: upstream/_versions/main/guides/resteasy-reactive.adoc:1334
 #, no-wrap
 msgid ""
-"@Path(\"fromages/{fromage}\")\n"
+"@Path(\"cheeses/{cheese}\")\n"
 "public class Endpoint {\n"
 msgstr ""
 
@@ -2509,13 +2509,13 @@ msgstr ""
 #, no-wrap
 msgid ""
 "    @GET\n"
-"    public String findFromage(String fromage) {\n"
-"        if(fromage == null)\n"
+"    public String findCheese(String cheese) {\n"
+"        if(cheese == null)\n"
 "            // send a 400\n"
 "            throw new BadRequestException();\n"
-"        if(!fromage.equals(\"camembert\"))\n"
+"        if(!cheese.equals(\"camembert\"))\n"
 "            // send a 404\n"
-"            throw new NotFoundException(\"Unknown cheese: \" + fromage);\n"
+"            throw new NotFoundException(\"Unknown cheese: \" + cheese);\n"
 "        return \"Camembert is a very nice cheese\";\n"
 "    }\n"
 "}\n"
@@ -2618,11 +2618,11 @@ msgstr ""
 #, no-wrap
 msgid ""
 "    @GET\n"
-"    public String findFromage(String fromage) {\n"
-"        if(fromage == null)\n"
+"    public String findCheese(String cheese) {\n"
+"        if(cheese == null)\n"
 "            // send a 400\n"
 "            throw new BadRequestException();\n"
-"        return cheeses.findCheese(fromage);\n"
+"        return cheeses.findCheese(cheese);\n"
 "    }\n"
 "} \n"
 msgstr ""
@@ -3068,7 +3068,7 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/resteasy-reactive.adoc:1594
-msgid "For example, if we have our own `FroMage` type on our endpoint:"
+msgid "For example, if we have our own `Cheese` type on our endpoint:"
 msgstr ""
 
 #. type: delimited block -
@@ -3085,7 +3085,7 @@ msgstr ""
 #: upstream/_versions/main/guides/resteasy-reactive.adoc:1605
 #, no-wrap
 msgid ""
-"class FroMage {\n"
+"class Cheese {\n"
 "    public String name;\n"
 msgstr ""
 
@@ -3093,7 +3093,7 @@ msgstr ""
 #: upstream/_versions/main/guides/resteasy-reactive.adoc:1610
 #, no-wrap
 msgid ""
-"    public FroMage(String name) {\n"
+"    public Cheese(String name) {\n"
 "        this.name = name;\n"
 "    }\n"
 "}\n"
@@ -3113,8 +3113,8 @@ msgstr ""
 #, no-wrap
 msgid ""
 "    @GET\n"
-"    public FroMage sayCheese() {\n"
-"        return new FroMage(\"Cheeeeeese\");\n"
+"    public Cheese sayCheese() {\n"
+"        return new Cheese(\"Cheeeeeese\");\n"
 "    }\n"
 msgstr ""
 
@@ -3123,8 +3123,8 @@ msgstr ""
 #, no-wrap
 msgid ""
 "    @PUT\n"
-"    public void addCheese(FroMage fromage) {\n"
-"        System.err.println(\"Received a new cheese: \" + fromage.name);\n"
+"    public void addCheese(Cheese cheese) {\n"
+"        System.err.println(\"Received a new cheese: \" + cheese.name);\n"
 "    }\n"
 "}\n"
 msgstr ""
@@ -3164,8 +3164,8 @@ msgstr ""
 #, no-wrap
 msgid ""
 "@Provider\n"
-"public class FroMageBodyHandler implements MessageBodyReader<FroMage>, \n"
-"                                           MessageBodyWriter<FroMage> {\n"
+"public class CheeseBodyHandler implements MessageBodyReader<Cheese>, \n"
+"                                           MessageBodyWriter<Cheese> {\n"
 msgstr ""
 
 #. type: delimited block -
@@ -3175,7 +3175,7 @@ msgid ""
 "    @Override\n"
 "    public boolean isWriteable(Class<?> type, Type genericType, \n"
 "                               Annotation[] annotations, MediaType mediaType) {\n"
-"        return type == FroMage.class;\n"
+"        return type == Cheese.class;\n"
 "    }\n"
 msgstr ""
 
@@ -3184,12 +3184,12 @@ msgstr ""
 #, no-wrap
 msgid ""
 "    @Override\n"
-"    public void writeTo(FroMage t, Class<?> type, Type genericType, \n"
+"    public void writeTo(Cheese t, Class<?> type, Type genericType, \n"
 "                        Annotation[] annotations, MediaType mediaType,\n"
 "                        MultivaluedMap<String, Object> httpHeaders, \n"
 "                        OutputStream entityStream)\n"
 "            throws IOException, WebApplicationException {\n"
-"        entityStream.write((\"[FroMageV1]\" + t.name)\n"
+"        entityStream.write((\"[CheeseV1]\" + t.name)\n"
 "                           .getBytes(StandardCharsets.UTF_8));\n"
 "    }\n"
 msgstr ""
@@ -3201,7 +3201,7 @@ msgid ""
 "    @Override\n"
 "    public boolean isReadable(Class<?> type, Type genericType, \n"
 "                              Annotation[] annotations, MediaType mediaType) {\n"
-"        return type == FroMage.class;\n"
+"        return type == Cheese.class;\n"
 "    }\n"
 msgstr ""
 
@@ -3210,15 +3210,15 @@ msgstr ""
 #, no-wrap
 msgid ""
 "    @Override\n"
-"    public FroMage readFrom(Class<FroMage> type, Type genericType, \n"
+"    public Cheese readFrom(Class<Cheese> type, Type genericType, \n"
 "                            Annotation[] annotations, MediaType mediaType,\n"
 "                            MultivaluedMap<String, String> httpHeaders,\n"
 "                            InputStream entityStream)\n"
 "            throws IOException, WebApplicationException {\n"
 "        String body = new String(entityStream.readAllBytes(), StandardCharsets.UTF_8);\n"
-"        if(body.startsWith(\"[FroMageV1]\"))\n"
-"            return new FroMage(body.substring(11));\n"
-"        throw new IOException(\"Invalid fromage: \" + body);\n"
+"        if(body.startsWith(\"[CheeseV1]\"))\n"
+"            return new Cheese(body.substring(11));\n"
+"        throw new IOException(\"Invalid cheese: \" + body);\n"
 "    }\n"
 msgstr ""
 
@@ -3252,8 +3252,8 @@ msgstr ""
 #, no-wrap
 msgid ""
 "@Provider\n"
-"public class FroMageBodyHandler implements MessageBodyReader<FroMage>, \n"
-"                                           ServerMessageBodyWriter<FroMage> {\n"
+"public class CheeseBodyHandler implements MessageBodyReader<Cheese>, \n"
+"                                           ServerMessageBodyWriter<Cheese> {\n"
 msgstr ""
 
 #. type: delimited block -
@@ -3269,7 +3269,7 @@ msgid ""
 "    @Override\n"
 "    public boolean isWriteable(Class<?> type, ResteasyReactiveResourceInfo target, \n"
 "                               MediaType mediaType) {\n"
-"        return type == FroMage.class;\n"
+"        return type == Cheese.class;\n"
 "    }\n"
 msgstr ""
 
@@ -3278,9 +3278,9 @@ msgstr ""
 #, no-wrap
 msgid ""
 "    @Override\n"
-"    public void writeResponse(FroMage t, ServerRequestContext context) \n"
+"    public void writeResponse(Cheese t, ServerRequestContext context) \n"
 "      throws WebApplicationException, IOException {\n"
-"        context.serverResponse().end(\"[FroMageV1]\" + t.name);\n"
+"        context.serverResponse().end(\"[CheeseV1]\" + t.name);\n"
 "    }\n"
 "}\n"
 msgstr ""
@@ -3321,8 +3321,8 @@ msgstr ""
 #, no-wrap
 msgid ""
 "    @PUT\n"
-"    public void addCheese(String fromage) {\n"
-"        System.err.println(\"Received a new cheese: \" + fromage);\n"
+"    public void addCheese(String cheese) {\n"
+"        System.err.println(\"Received a new cheese: \" + cheese);\n"
 "    }\n"
 "}\n"
 msgstr ""
@@ -3355,7 +3355,7 @@ msgstr ""
 #, no-wrap
 msgid ""
 "@Provider\n"
-"public class FroMageIOInterceptor implements ReaderInterceptor, WriterInterceptor {\n"
+"public class CheeseIOInterceptor implements ReaderInterceptor, WriterInterceptor {\n"
 msgstr ""
 
 #. type: delimited block -
@@ -3835,10 +3835,10 @@ msgstr ""
 #: upstream/_versions/main/guides/resteasy-reactive.adoc:2089
 #, no-wrap
 msgid ""
-"class FroMage {\n"
+"class Cheese {\n"
 "    public String name;\n"
 "    @JsonCreator\n"
-"    public FroMage(String name) {\n"
+"    public Cheese(String name) {\n"
 "        this.name = name;\n"
 "    }\n"
 "    @Override\n"
@@ -3862,8 +3862,8 @@ msgstr ""
 msgid ""
 "    @Produces({MediaType.APPLICATION_JSON, MediaType.TEXT_PLAIN})\n"
 "    @GET\n"
-"    public FroMage get() {\n"
-"        return new FroMage(\"Morbier\");\n"
+"    public Cheese get() {\n"
+"        return new Cheese(\"Morbier\");\n"
 "    }\n"
 msgstr ""
 
@@ -3873,8 +3873,8 @@ msgstr ""
 msgid ""
 "    @Consumes(MediaType.TEXT_PLAIN)\n"
 "    @PUT\n"
-"    public FroMage putString(String cheese) {\n"
-"        return new FroMage(cheese);\n"
+"    public Cheese putString(String cheese) {\n"
+"        return new Cheese(cheese);\n"
 "    }\n"
 msgstr ""
 
@@ -3884,8 +3884,8 @@ msgstr ""
 msgid ""
 "    @Consumes(MediaType.APPLICATION_JSON)\n"
 "    @PUT\n"
-"    public FroMage putJson(FroMage fromage) {\n"
-"        return fromage;\n"
+"    public Cheese putJson(Cheese cheese) {\n"
+"        return cheese;\n"
 "    }\n"
 "}\n"
 msgstr ""
