--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-kubernetes-config-group-debug-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-kubernetes-config-group-debug-config.adoc.po
@@ -31,13 +31,13 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-kubernetes-config-group-debug-config.adoc:9
 #, no-wrap
 msgid "Type"
-msgstr ""
+msgstr "タイプ"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-kubernetes-config-group-debug-config.adoc:11
 #, no-wrap
 msgid "Default"
-msgstr ""
+msgstr "デフォルト"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-kubernetes-config-group-debug-config.adoc:16
@@ -56,14 +56,14 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-kubernetes-config-group-debug-config.adoc:53
 #, no-wrap
 msgid "boolean"
-msgstr ""
+msgstr "boolean"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-kubernetes-config-group-debug-config.adoc:20
 #: upstream/_generated-config/main/config/quarkus-kubernetes-config-group-debug-config.adoc:56
 #, no-wrap
 msgid "`false`"
-msgstr ""
+msgstr "`false`"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-kubernetes-config-group-debug-config.adoc:25
@@ -84,7 +84,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-kubernetes-config-group-debug-config.adoc:71
 #, no-wrap
 msgid "string"
-msgstr ""
+msgstr "string"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-kubernetes-config-group-debug-config.adoc:29
@@ -129,7 +129,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-kubernetes-config-group-debug-config.adoc:80
 #, no-wrap
 msgid "int"
-msgstr ""
+msgstr "int"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-kubernetes-config-group-debug-config.adoc:47
