--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-security-webauthn-web-authn-run-time-config-relying-party-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-security-webauthn-web-authn-run-time-config-relying-party-config.adoc.po
@@ -31,13 +31,13 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-security-webauthn-web-authn-run-time-config-relying-party-config.adoc:9
 #, no-wrap
 msgid "Type"
-msgstr ""
+msgstr "タイプ"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-security-webauthn-web-authn-run-time-config-relying-party-config.adoc:11
 #, no-wrap
 msgid "Default"
-msgstr ""
+msgstr "デフォルト"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-security-webauthn-web-authn-run-time-config-relying-party-config.adoc:16
@@ -57,7 +57,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-security-webauthn-web-authn-run-time-config-relying-party-config.adoc:35
 #, no-wrap
 msgid "string"
-msgstr ""
+msgstr "string"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-security-webauthn-web-authn-run-time-config-relying-party-config.adoc:25
