--- a/l10n/po/ja_JP/_versions/main/guides/security-webauthn.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/security-webauthn.adoc.po
@@ -34,7 +34,7 @@ msgstr ""
 #: upstream/_versions/main/guides/security-webauthn.adoc:16
 #, no-wrap
 msgid "Prerequisites"
-msgstr ""
+msgstr "前提条件"
 
 #. type: Title ==
 #: upstream/_versions/main/guides/security-webauthn.adoc:20
@@ -91,7 +91,7 @@ msgstr ""
 #: upstream/_versions/main/guides/security-webauthn.adoc:62
 #, no-wrap
 msgid "Architecture"
-msgstr ""
+msgstr "アーキテクチャ"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-webauthn.adoc:65
@@ -101,7 +101,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/security-webauthn.adoc:67
 msgid "`/api/public`"
-msgstr ""
+msgstr "`/api/public`"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-webauthn.adoc:68
@@ -111,12 +111,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/security-webauthn.adoc:69
 msgid "`/api/users/me`"
-msgstr ""
+msgstr "`/api/users/me`"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-webauthn.adoc:70
 msgid "`/api/admin`"
-msgstr ""
+msgstr "`/api/admin`"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-webauthn.adoc:75
@@ -127,17 +127,17 @@ msgstr ""
 #: upstream/_versions/main/guides/security-webauthn.adoc:76
 #, no-wrap
 msgid "Solution"
-msgstr ""
+msgstr "ソリューション"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-webauthn.adoc:80
 msgid "We recommend that you follow the instructions in the next sections and create the application step by step.  However, you can go right to the completed example."
-msgstr ""
+msgstr "次の章で紹介する手順に沿って、ステップを踏んでアプリを作成することをお勧めします。ただし、完成した例にそのまま進んでも構いません。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-webauthn.adoc:82
 msgid "Clone the Git repository: `git clone {quickstarts-clone-url}`, or download an {quickstarts-archive-url}[archive]."
-msgstr ""
+msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone-url}` 、 {quickstarts-archive-url}[アーカイブ] をダウンロードします。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-webauthn.adoc:84
@@ -153,12 +153,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/security-webauthn.adoc:88
 msgid "First, we need a new project. Create a new project with the following command:"
-msgstr ""
+msgstr "まず、新しいプロジェクトが必要です。以下のコマンドで新規プロジェクトを作成します。"
 
 #. type: delimited block =
 #: upstream/_versions/main/guides/security-webauthn.adoc:96
 msgid "Don't forget to add the database connector library of choice. Here we are using PostgreSQL as identity store."
-msgstr ""
+msgstr "選択したデータベースコネクタライブラリを追加することを忘れないでください。ここでは、PostgreSQLをIDストアとして使用しています。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-webauthn.adoc:100
@@ -173,14 +173,14 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/security-webauthn.adoc:108
 msgid "This will add the following to your build file:"
-msgstr ""
+msgstr "これにより、 `pom.xml` に以下が追加されます:"
 
 #. type: Block title
 #: upstream/_versions/main/guides/security-webauthn.adoc:110
 #: upstream/_versions/main/guides/security-webauthn.adoc:1065
 #, no-wrap
 msgid "pom.xml"
-msgstr ""
+msgstr "pom.xml"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/security-webauthn.adoc:116
@@ -197,7 +197,7 @@ msgstr ""
 #: upstream/_versions/main/guides/security-webauthn.adoc:1074
 #, no-wrap
 msgid "build.gradle"
-msgstr ""
+msgstr "build.gradle"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/security-webauthn.adoc:122
@@ -209,12 +209,12 @@ msgstr ""
 #: upstream/_versions/main/guides/security-webauthn.adoc:124
 #, no-wrap
 msgid "Writing the application"
-msgstr ""
+msgstr "アプリケーションの記述"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-webauthn.adoc:127
 msgid "Let's start by implementing the `/api/public` endpoint. As you can see from the source code below, it is just a regular JAX-RS resource:"
-msgstr ""
+msgstr "`/api/public` エンドポイントの実装から始めましょう。以下のソースコードから分かるように、通常のJAX-RSリソースです:"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/security-webauthn.adoc:131
@@ -283,7 +283,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/security-webauthn.adoc:161
 msgid "The source code for the `/api/admin` endpoint is also very simple. The main difference here is that we are using a `@RolesAllowed` annotation to make sure that only users granted with the `admin` role can access the endpoint:"
-msgstr ""
+msgstr "`/api/admin` エンドポイントのソースコードも非常にシンプルです。ここでの主な違いは、 `admin` ロールで付与されたユーザーだけがエンドポイントにアクセスできるように `@RolesAllowed` アノテーションを使用していることです:"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/security-webauthn.adoc:172
@@ -320,7 +320,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/security-webauthn.adoc:187
 msgid "Finally, let's consider the `/api/users/me` endpoint. As you can see from the source code below, we are trusting only users with the `user` role.  We are using `SecurityContext` to get access to the current authenticated Principal and we return the user's name. This information is loaded from the database."
-msgstr ""
+msgstr "最後に、 `/api/users/me` エンドポイントを考えてみましょう。下のソースコードを見ればわかるように、 `user` の役割を持つユーザのみを信頼しています。現在認証されているプリンシパルへのアクセスを得るために `SecurityContext` を使用しており、ユーザーの名前を返します。この情報はデータベースから読み込まれます。"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/security-webauthn.adoc:197
@@ -733,7 +733,7 @@ msgstr ""
 #: upstream/_versions/main/guides/security-webauthn.adoc:1280
 #, no-wrap
 msgid "import javax.enterprise.context.ApplicationScoped;\n"
-msgstr ""
+msgstr "import javax.enterprise.context.ApplicationScoped;\n"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/security-webauthn.adoc:425
@@ -1334,7 +1334,7 @@ msgstr ""
 #: upstream/_versions/main/guides/security-webauthn.adoc:811
 #, no-wrap
 msgid "Logout"
-msgstr ""
+msgstr "ログアウト"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-webauthn.adoc:814
@@ -2070,15 +2070,15 @@ msgstr ""
 #: upstream/_versions/main/guides/security-webauthn.adoc:1302
 #, no-wrap
 msgid "Configuration Reference"
-msgstr ""
+msgstr "設定リファレンス"
 
 #. type: Title ==
 #: upstream/_versions/main/guides/security-webauthn.adoc:1306
 #, no-wrap
 msgid "References"
-msgstr ""
+msgstr "参照"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-webauthn.adoc:1308
 msgid "xref:security.adoc[Quarkus Security]"
-msgstr ""
+msgstr "xref:security.adoc[Quarkus Security]"
