--- a/l10n/po/ja_JP/_guides/mongodb-panache-kotlin.adoc.po
+++ b/l10n/po/ja_JP/_guides/mongodb-panache-kotlin.adoc.po
@@ -3,45 +3,43 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2022-02-04 01:50+0900\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2022-03-25 14:52+0900\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/main/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/mongodb-panache-kotlin.adoc:6
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Simplified MongoDB with Panache and Kotlin"
-msgstr "PanacheとKotlinによるシンプルなMongoDB"
+msgstr "シンプルになったMongoDB with PanacheとKotlin"
 
 #. type: Plain text
 #: upstream/_guides/mongodb-panache-kotlin.adoc:15
-#, fuzzy
 msgid "MongoDB is a well known NoSQL Database that is widely used. MongoDB with Panache offers a new layer atop this familiar framework.  This guide will not dive in to the specifics of either as those are already covered in the xref:mongodb-panache.adoc[MongoDB with Panache guide].  In this guide, we'll cover the Kotlin specific changes needed to use MongoDB with Panache in your Kotlin-based Quarkus applications."
-msgstr "MongoDBは、広く利用されている有名なNoSQLデータベースです。MongoDB with Panacheは、このよく知られたフレームワークの上に新しいレイヤーを提供します。このガイドでは、MongoDB link:mongodb-panache.html[with Pan]ache の詳細については説明しませんが、MongoDB with Panache についてはすでに説明されています。このガイドでは、KotlinベースのQuarkusアプリケーションでMongoDB with Panacheを使用するために必要なKotlin固有の変更点について説明します。"
+msgstr "MongoDBは、広く利用されている有名なNoSQLデータベースです。MongoDB with Panacheは、このよく知られたフレームワークの上に新しいレイヤーを提供します。このガイドでは、MongoDB with Panache  link:mongodb-panache.html[MongoDB with Panache] についてはすでに説明されているため詳細については説明しません。このガイドでは、KotlinベースのQuarkusアプリケーションでMongoDB with Panacheを使用するために必要なKotlin固有の変更点について説明します。"
 
 #. type: Title ==
 #: upstream/_guides/mongodb-panache-kotlin.adoc:16
 #, no-wrap
 msgid "First: an example"
-msgstr "最初に:例"
+msgstr "最初に:一例"
 
 #. type: Plain text
 #: upstream/_guides/mongodb-panache-kotlin.adoc:21
-#, fuzzy
 msgid "As we saw in the MongoDB with Panache guide, it allows us to extend the functionality in our entities and repositories (also known as DAOs) with some automatically provided functionality.  When using Kotlin, the approach is very similar to what we see in the Java version with a slight change or two.  To Panache-enable your entity, you would define it something like:"
-msgstr "Panacheを使ったMongoDBガイドで見たように、これによってエンティティやリポジトリ(DAOとも呼ばれる)の機能を、自動的に提供される機能で拡張することができます。Kotlin を使っている場合は、Java 版と同じようなアプローチになりますが、若干の変更があります。エンティティをPanache対応にするには、次のように定義します。"
+msgstr "MongoDB with Panacheガイドで見たように、これによってエンティティやリポジトリ(DAOとも呼ばれる)の機能を、自動的に提供される機能で拡張することができます。Kotlin を使っている場合は、Java 版と同じようなアプローチになりますが、若干の変更があります。エンティティをPanache対応にするには、次のように定義します。"
 
 #. type: delimited block -
 #: upstream/_guides/mongodb-panache-kotlin.adoc:29
@@ -88,20 +86,18 @@ msgstr "コンパニオンオブジェクトは、特定のインスタンスに
 
 #. type: Plain text
 #: upstream/_guides/mongodb-panache-kotlin.adoc:54
-#, fuzzy
 msgid "Here there are options, but we've chosen the `lateinit` approach.  This allows us to declare these fields as non-null knowing they will be properly assigned either by the constructor (not shown) or by the MongoDB POJO codec loading data from the database."
-msgstr "ここでは選択肢がありますが、 `lateinit` の方法を選びました。これにより、これらのフィールドを非 null と宣言しておけば、 コンストラクタ (図示せず) や MongoDB POJO コーデックがデータベースからデータを読み込む際に適切に割り当てられることがわかります。"
+msgstr "ここでは選択肢がありますが、 `lateinit` の方法を選びました。これにより、これらのフィールドを非 null と宣言しておけば、 コンストラクタ (コードには表れていません) や MongoDB POJO コーデックがデータベースからデータを読み込む際に適切に割り当てられることがわかります。"
 
 #. type: Plain text
 #: upstream/_guides/mongodb-panache-kotlin.adoc:58
-#, fuzzy
 msgid "These types differ from the Java types mentioned in those tutorials.  For Kotlin support, all the Panache types will be found in the `io.quarkus.mongodb.panache.kotlin` package.  This subpackage allows for the distinction between the Java and Kotlin variants and allows for both to be used unambiguously in a single project."
 msgstr "これらの型は、これらのチュートリアルで述べられているJavaの型とは異なります。Kotlinをサポートするために、Panacheのすべての型は `io.quarkus.mongodb.panache.kotlin` パッケージに含まれています。このサブパッケージでは、JavaとKotlinの型を区別することができ、1つのプロジェクトで両方を明確に使用することができます。"
 
 #. type: Plain text
 #: upstream/_guides/mongodb-panache-kotlin.adoc:62
 msgid "In the Kotlin version, we've simply moved the bulk of the link:https://www.martinfowler.com/eaaCatalog/activeRecord.html[`active record pattern`] functionality to the `companion object`.  Apart from this slight change, we can then work with our types in ways that map easily from the Java side of world."
-msgstr "Kotlin版では、単純に link:https://www.martinfowler.com/eaaCatalog/activeRecord.html[`active record pattern`] の機能を `companion object` に追加しました。このわずかな変更を別にすれば、私たちは、世界のJava側から簡単にマップする方法で私たちの型を使用して作業することができます。"
+msgstr "Kotlin版では、単純に link:https://www.martinfowler.com/eaaCatalog/activeRecord.html[`active record pattern`] の機能を `companion object` に追加しました。このわずかな変更を別にすれば、私たちは、Java側の世界から簡単にマップする方法で私たちの型を使用して作業することができます。"
 
 #. type: Title ==
 #: upstream/_guides/mongodb-panache-kotlin.adoc:64
@@ -117,7 +113,6 @@ msgstr "エンティティの定義"
 
 #. type: Plain text
 #: upstream/_guides/mongodb-panache-kotlin.adoc:70
-#, fuzzy
 msgid "When using the repository pattern, you can define your entities as regular POJO."
 msgstr "リポジトリパターンを使用する場合は、エンティティを通常のPOJOとして定義することができます。"
 
@@ -141,7 +136,6 @@ msgstr "リポジトリの定義"
 
 #. type: Plain text
 #: upstream/_guides/mongodb-panache-kotlin.adoc:84
-#, fuzzy
 msgid "When using Repositories, you get the exact same convenient methods as with the active record pattern, injected in your Repository, by making them implement `PanacheMongoRepository`:"
 msgstr "リポジトリを使用する場合、 `PanacheMongoRepository` を実装させることで、アクティブレコードパターンとまったく同じ便利なメソッドをリポジトリに注入することができます。"
 
@@ -159,7 +153,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/mongodb-panache-kotlin.adoc:97
-#, fuzzy
 msgid "All the operations that are defined on `PanacheMongoEntityBase` are available on your repository, so using it is exactly the same as using the active record pattern, except you need to inject it:"
 msgstr "`PanacheMongoEntityBase` で定義されているすべての操作は、あなたのリポジトリで利用できます。そのため、これを使用することは、注入する必要があることを除けば、active record パターンを使用することとまったく同じです。"
 
@@ -322,21 +315,19 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/mongodb-panache-kotlin.adoc:176
-#, fuzzy
 msgid "For more examples, please consult the xref:mongodb-panache.adoc[Java version] for complete details.  Both APIs are the same and work identically except for some Kotlin-specific tweaks to make things feel more natural to Kotlin developers.  These tweaks include things like better use of nullability and the lack of `Optional` on API methods."
 msgstr "より詳しい例については、 link:mongodb-panache.html[Java版]を参照してください。どちらのAPIも同じで、Kotlin開発者がより自然に感じられるようにKotlin特有の調整を行っている以外は、同じように動作します。これらの調整には、nullabilityの使用方法の改善や、APIメソッドに `Optional` を使用しないことなどが含まれます。"
 
 #. type: Title ==
 #: upstream/_guides/mongodb-panache-kotlin.adoc:177
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Setting up and configuring MongoDB with Panache"
-msgstr "PanacheによるMongoDBのセットアップと設定"
+msgstr "MongoDB with Panacheのセットアップと設定"
 
 #. type: Plain text
 #: upstream/_guides/mongodb-panache-kotlin.adoc:182
-#, fuzzy
 msgid "To get started using MongoDB with Panache with Kotlin, you can, generally, follow the steps laid out in the Java tutorial.  The biggest change to configuring your project is the Quarkus artifact to include.  You can, of course, keep the Java version if you need but if all you need are the Kotlin APIs then include the following dependency instead:"
-msgstr "MongoDBとPanacheをKotlinで使い始めるには、一般的にはJavaのチュートリアルで説明した手順を踏むことができます。プロジェクトの設定で最も大きな変更点は、インクルードするQuarkusのアーティファクトです。もちろん、必要であればJavaバージョンを残すこともできますが、Kotlin APIだけが必要であれば、代わりに以下の依存関係をインクルードします。"
+msgstr "MongoDB with PanacheをKotlinで使い始めるには、一般的にはJavaのチュートリアルで説明した手順を踏むことができます。プロジェクトの設定で最も大きな変更点は、インクルードするQuarkusのアーティファクトです。もちろん、必要であればJavaバージョンを残すこともできますが、Kotlin APIだけが必要であれば、代わりに以下の依存関係をインクルードします。"
 
 #. type: Block title
 #: upstream/_guides/mongodb-panache-kotlin.adoc:184
