--- a/l10n/po/ja_JP/_guides/mongodb-panache-kotlin.adoc.po
+++ b/l10n/po/ja_JP/_guides/mongodb-panache-kotlin.adoc.po
@@ -28,7 +28,7 @@ msgstr "シンプルになったMongoDB with PanacheとKotlin"
 #. type: Plain text
 #: upstream/_guides/mongodb-panache-kotlin.adoc:15
 msgid "MongoDB is a well known NoSQL Database that is widely used. MongoDB with Panache offers a new layer atop this familiar framework.  This guide will not dive in to the specifics of either as those are already covered in the xref:mongodb-panache.adoc[MongoDB with Panache guide].  In this guide, we'll cover the Kotlin specific changes needed to use MongoDB with Panache in your Kotlin-based Quarkus applications."
-msgstr "MongoDBは、広く利用されている有名なNoSQLデータベースです。MongoDB with Panacheは、このよく知られたフレームワークの上に新しいレイヤーを提供します。このガイドでは、MongoDB with Panache  link:mongodb-panache.html[MongoDB with Panache] についてはすでに説明されているため詳細については説明しません。このガイドでは、KotlinベースのQuarkusアプリケーションでMongoDB with Panacheを使用するために必要なKotlin固有の変更点について説明します。"
+msgstr "MongoDBは、広く利用されている有名なNoSQLデータベースです。MongoDB with Panacheは、このよく知られたフレームワークの上に新しいレイヤーを提供します。このガイドでは、 link:mongodb-panache.html[MongoDB with Panache] についてはすでに説明されているため詳細については説明しません。このガイドでは、KotlinベースのQuarkusアプリケーションでMongoDB with Panacheを使用するために必要なKotlin固有の変更点について説明します。"
 
 #. type: Title ==
 #: upstream/_guides/mongodb-panache-kotlin.adoc:16
