--- a/l10n/po/ja_JP/_versions/2.2/guides/mongodb-panache-kotlin.adoc.po
+++ b/l10n/po/ja_JP/_versions/2.2/guides/mongodb-panache-kotlin.adoc.po
@@ -23,7 +23,7 @@ msgstr ""
 #: upstream/_versions/2.2/guides/mongodb-panache-kotlin.adoc:6
 #, no-wrap
 msgid "Simplified MongoDB with Panache and Kotlin"
-msgstr ""
+msgstr "シンプルになったMongoDB with PanacheとKotlin"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/mongodb-panache-kotlin.adoc:15
@@ -39,7 +39,7 @@ msgstr "最初に:例"
 #. type: Plain text
 #: upstream/_versions/2.2/guides/mongodb-panache-kotlin.adoc:21
 msgid "As we saw in the MongoDB with Panache guide, it allows us to extend the functionality in our entities and repositories (also known as DAOs) with some automatically provided functionality.  When using Kotlin, the approach is very similar to what we see in the Java version with a slight change or two.  To Panache-enable your entity, you would define it something like:"
-msgstr ""
+msgstr "MongoDB with Panacheガイドで見たように、これによってエンティティやリポジトリ(DAOとも呼ばれる)の機能を、自動的に提供される機能で拡張することができます。Kotlin を使っている場合は、Java 版と同じようなアプローチになりますが、若干の変更があります。エンティティをPanache対応にするには、次のように定義します。"
 
 #. type: delimited block -
 #: upstream/_versions/2.2/guides/mongodb-panache-kotlin.adoc:29
@@ -87,12 +87,12 @@ msgstr "コンパニオンオブジェクトは、特定のインスタンスに
 #. type: Plain text
 #: upstream/_versions/2.2/guides/mongodb-panache-kotlin.adoc:54
 msgid "Here there are options, but we've chosen the `lateinit` approach.  This allows us to declare these fields as non-null knowing they will be properly assigned either by the constructor (not shown) or by the MongoDB POJO codec loading data from the database."
-msgstr ""
+msgstr "ここでは選択肢がありますが、 `lateinit` の方法を選びました。これにより、これらのフィールドを非 null と宣言しておけば、 コンストラクタ (コードには表れていません) や MongoDB POJO コーデックがデータベースからデータを読み込む際に適切に割り当てられることがわかります。"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/mongodb-panache-kotlin.adoc:58
 msgid "These types differ from the Java types mentioned in those tutorials.  For Kotlin support, all the Panache types will be found in the `io.quarkus.mongodb.panache.kotlin` package.  This subpackage allows for the distinction between the Java and Kotlin variants and allows for both to be used unambiguously in a single project."
-msgstr ""
+msgstr "これらの型は、これらのチュートリアルで述べられているJavaの型とは異なります。Kotlinをサポートするために、Panacheのすべての型は `io.quarkus.mongodb.panache.kotlin` パッケージに含まれています。このサブパッケージでは、JavaとKotlinの型を区別することができ、1つのプロジェクトで両方を明確に使用することができます。"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/mongodb-panache-kotlin.adoc:62
@@ -114,7 +114,7 @@ msgstr "エンティティの定義"
 #. type: Plain text
 #: upstream/_versions/2.2/guides/mongodb-panache-kotlin.adoc:70
 msgid "When using the repository pattern, you can define your entities as regular POJO."
-msgstr ""
+msgstr "リポジトリパターンを使用する場合は、エンティティを通常のPOJOとして定義することができます。"
 
 #. type: delimited block -
 #: upstream/_versions/2.2/guides/mongodb-panache-kotlin.adoc:78
@@ -137,7 +137,7 @@ msgstr "リポジトリの定義"
 #. type: Plain text
 #: upstream/_versions/2.2/guides/mongodb-panache-kotlin.adoc:84
 msgid "When using Repositories, you get the exact same convenient methods as with the active record pattern, injected in your Repository, by making them implement `PanacheMongoRepository`:"
-msgstr ""
+msgstr "リポジトリを使用する場合、 `PanacheMongoRepository` を実装させることで、アクティブレコードパターンとまったく同じ便利なメソッドをリポジトリに注入することができます。"
 
 #. type: delimited block -
 #: upstream/_versions/2.2/guides/mongodb-panache-kotlin.adoc:93
@@ -154,7 +154,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/2.2/guides/mongodb-panache-kotlin.adoc:97
 msgid "All the operations that are defined on `PanacheMongoEntityBase` are available on your repository, so using it is exactly the same as using the active record pattern, except you need to inject it:"
-msgstr ""
+msgstr "`PanacheMongoEntityBase` で定義されているすべての操作は、あなたのリポジトリで利用できます。そのため、これを使用することは、注入する必要があることを除けば、active record パターンを使用することとまったく同じです。"
 
 #. type: delimited block -
 #: upstream/_versions/2.2/guides/mongodb-panache-kotlin.adoc:102
@@ -327,7 +327,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/2.2/guides/mongodb-panache-kotlin.adoc:182
 msgid "To get started using MongoDB with Panache with Kotlin, you can, generally, follow the steps laid out in the Java tutorial.  The biggest change to configuring your project is the Quarkus artifact to include.  You can, of course, keep the Java version if you need but if all you need are the Kotlin APIs then include the following dependency instead:"
-msgstr ""
+msgstr "MongoDB with PanacheをKotlinで使い始めるには、一般的にはJavaのチュートリアルで説明した手順を踏むことができます。プロジェクトの設定で最も大きな変更点は、インクルードするQuarkusのアーティファクトです。もちろん、必要であればJavaバージョンを残すこともできますが、Kotlin APIだけが必要であれば、代わりに以下の依存関係をインクルードします。"
 
 #. type: delimited block -
 #: upstream/_versions/2.2/guides/mongodb-panache-kotlin.adoc:191
