Update .po files

--- a/l10n/po/ja_JP/_versions/main/guides/native-and-ssl.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/native-and-ssl.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-02-04 01:49+0900\n"
+"POT-Creation-Date: 2022-03-27 02:34+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -193,8 +193,10 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/native-and-ssl.adoc:87
-msgid "the Consul Config extension (`quarkus-consul-config`),"
-msgstr ""
+#, fuzzy
+#| msgid "the Neo4j extension (`quarkus-neo4j`),"
+msgid "the Consul Config extension (`quarkus-config-consul`),"
+msgstr "Neo4j エクステンション ( `quarkus-neo4j` ) 、"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/native-and-ssl.adoc:88
