Apply translation memory

--- a/l10n/po/ja_JP/_posts/2022-03-28-vscode-quarkus-1.10.0.adoc.po
+++ b/l10n/po/ja_JP/_posts/2022-03-28-vscode-quarkus-1.10.0.adoc.po
@@ -304,7 +304,7 @@ msgstr ""
 #: upstream/_posts/2022-03-28-vscode-quarkus-1.10.0.adoc:103
 #, no-wrap
 msgid "Links"
-msgstr ""
+msgstr "リンク"
 
 #. type: Plain text
 #: upstream/_posts/2022-03-28-vscode-quarkus-1.10.0.adoc:105
