Update .po files

--- a/l10n/po/ja_JP/_versions/main/guides/optaplanner.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/optaplanner.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-03-19 02:28+0000\n"
+"POT-Creation-Date: 2022-03-29 02:40+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -795,7 +795,7 @@ msgstr ""
 #: upstream/_versions/main/guides/optaplanner.adoc:445
 #, no-wrap
 msgid ""
-"    private Constraint roomConflict(ConstraintFactory constraintFactory) {\n"
+"    Constraint roomConflict(ConstraintFactory constraintFactory) {\n"
 "        // A room can accommodate at most one lesson at the same time.\n"
 msgstr ""
 
@@ -805,7 +805,7 @@ msgstr ""
 msgid ""
 "        // Select a lesson ...\n"
 "        return constraintFactory\n"
-"                .from(Lesson.class)\n"
+"                .forEach(Lesson.class)\n"
 "                // ... and pair it with another lesson ...\n"
 "                .join(Lesson.class,\n"
 "                        // ... in the same timeslot ...\n"
@@ -823,9 +823,9 @@ msgstr ""
 #: upstream/_versions/main/guides/optaplanner.adoc:470
 #, no-wrap
 msgid ""
-"    private Constraint teacherConflict(ConstraintFactory constraintFactory) {\n"
+"    Constraint teacherConflict(ConstraintFactory constraintFactory) {\n"
 "        // A teacher can teach at most one lesson at the same time.\n"
-"        return constraintFactory.from(Lesson.class)\n"
+"        return constraintFactory.forEach(Lesson.class)\n"
 "                .join(Lesson.class,\n"
 "                        Joiners.equal(Lesson::getTimeslot),\n"
 "                        Joiners.equal(Lesson::getTeacher),\n"
@@ -838,9 +838,9 @@ msgstr ""
 #: upstream/_versions/main/guides/optaplanner.adoc:480
 #, no-wrap
 msgid ""
-"    private Constraint studentGroupConflict(ConstraintFactory constraintFactory) {\n"
+"    Constraint studentGroupConflict(ConstraintFactory constraintFactory) {\n"
 "        // A student can attend at most one lesson at the same time.\n"
-"        return constraintFactory.from(Lesson.class)\n"
+"        return constraintFactory.forEach(Lesson.class)\n"
 "                .join(Lesson.class,\n"
 "                        Joiners.equal(Lesson::getTimeslot),\n"
 "                        Joiners.equal(Lesson::getStudentGroup),\n"
