Apply translation memory

--- a/l10n/po/ja_JP/_posts/2022-04-05-camel-quarkus-effortless-apis.adoc.po
+++ b/l10n/po/ja_JP/_posts/2022-04-05-camel-quarkus-effortless-apis.adoc.po
@@ -64,7 +64,7 @@ msgstr ""
 #: upstream/_posts/2022-04-05-camel-quarkus-effortless-apis.adoc:17
 #, no-wrap
 msgid "Introduction"
-msgstr ""
+msgstr "はじめに"
 
 #. type: Plain text
 #: upstream/_posts/2022-04-05-camel-quarkus-effortless-apis.adoc:20
@@ -328,7 +328,7 @@ msgstr ""
 #: upstream/_posts/2022-04-05-camel-quarkus-effortless-apis.adoc:124
 #, no-wrap
 msgid "Source"
-msgstr ""
+msgstr "ソース"
 
 #. type: Target for macro image
 #: upstream/_posts/2022-04-05-camel-quarkus-effortless-apis.adoc:124
@@ -512,7 +512,7 @@ msgstr ""
 #: upstream/_posts/2022-04-05-camel-quarkus-effortless-apis.adoc:199
 #, no-wrap
 msgid "VSCode"
-msgstr ""
+msgstr "VSCode"
 
 #. type: Target for macro image
 #: upstream/_posts/2022-04-05-camel-quarkus-effortless-apis.adoc:199
@@ -624,7 +624,7 @@ msgstr ""
 #: upstream/_posts/2022-04-05-camel-quarkus-effortless-apis.adoc:332
 #, no-wrap
 msgid "Summary"
-msgstr ""
+msgstr "まとめ"
 
 #. type: Plain text
 #: upstream/_posts/2022-04-05-camel-quarkus-effortless-apis.adoc:246
