Add machine translation

--- a/l10n/po/ja_JP/_includes/get-started-code-steps.html.po
+++ b/l10n/po/ja_JP/_includes/get-started-code-steps.html.po
@@ -29,8 +29,9 @@ msgstr "コマンドライン・インターフェースによるインストー
 
 #. type: Content of: <div><div><div><p>
 #: upstream/_includes/get-started-code-steps.html:9
+#, fuzzy
 msgid "Open your favorite terminal and use JBang to install the Quarkus CLI. You do not need to have Java installed first."
-msgstr ""
+msgstr "お気に入りのターミナルを開き、JBangを使用してQuarkus CLIをインストールします。Javaを最初にインストールする必要はありません。"
 
 #. type: Content of: <div><div><div><h4>
 #: upstream/_includes/get-started-code-steps.html:10
@@ -67,8 +68,9 @@ msgstr "初めてのインストールの場合は、シェルを再起動する
 
 #. type: Content of: <div><div><div><h4>
 #: upstream/_includes/get-started-code-steps.html:25
+#, fuzzy
 msgid "Or, you can also install the CLI with SDKMAN!"
-msgstr ""
+msgstr "また、SDKMANでCLIをインストールすることもできますよ。"
 
 #. type: Content of: <div><div><div><div><div><pre>
 #: upstream/_includes/get-started-code-steps.html:28
@@ -78,8 +80,9 @@ msgstr "&lt;code&gt;sdk install quarkus&lt;/code&gt;となります。"
 
 #. type: Content of: <div><div><div><h4>
 #: upstream/_includes/get-started-code-steps.html:31
+#, fuzzy
 msgid "For more options, such as Homebrew or Chocolatey, see <a href=\"/guides/cli-tooling\">the Quarkus CLI guide</a>."
-msgstr ""
+msgstr "Homebrew や Chocolatey などのオプションについては、&lt;a href=\"/guides/cli-tooling\"&gt;Quarkus CLI ガイド&lt;/a&gt;を参照してください。"
 
 #. type: Content of: <div><div><div><h2>
 #: upstream/_includes/get-started-code-steps.html:34
