Add some translations

--- a/l10n/po/ja_JP/_posts/2022-02-08-quarkus-2-7-1-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2022-02-08-quarkus-2-7-1-final-released.adoc.po
@@ -3,28 +3,28 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2022-02-08 19:12+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2022-04-06 10:08+0900\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #. type: Plain text
 #: upstream/_posts/2022-02-08-quarkus-2-7-1-final-released.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "---\n"
 msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2022-02-08-quarkus-2-7-1-final-released.adoc:8
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Quarkus 2.7.1.Final released - Maintenance release'\n"
@@ -35,7 +35,7 @@ msgid ""
 "---\n"
 msgstr ""
 "layout: post\n"
-"title: 'Quarkus 2.7.1.Final released - Maintenance release'\n"
+"title: 'Quarkus 2.7.1.Final リリース - メンテナンスリリース'\n"
 "date: 2022-02-08\n"
 "tags: release\n"
 "synopsis: 2.7.1.Finalは、2.7リリーストレインの最初のメンテナンスリリースです。\n"
@@ -44,39 +44,35 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2022-02-08-quarkus-2-7-1-final-released.adoc:12
-#, fuzzy
 msgid "Today, we released Quarkus 2.7.1.Final, our first maintenance release for our 2.7 release train.  It contains bugfixes and documentation improvements, but also a couple of new features, filling a few gaps."
 msgstr "本日、Quarkus 2.7.1.Finalをリリースしました。これは、2.7リリーストレインの最初のメンテナンスリリースです。このリリースには、バグフィックスとドキュメントの改善が含まれていますが、いくつかの新機能も含まれており、いくつかのギャップを埋めるものとなっています。"
 
 #. type: Plain text
 #: upstream/_posts/2022-02-08-quarkus-2-7-1-final-released.adoc:14
-#, fuzzy
 msgid "It is a safe upgrade for anyone already using 2.7."
-msgstr "すでに2.7をお使いの方も安心してアップグレードできます。"
+msgstr "これは、すでに2.7を使用している人にとって安全なアップグレードです。"
 
 #. type: Plain text
 #: upstream/_posts/2022-02-08-quarkus-2-7-1-final-released.adoc:16
-#, fuzzy
 msgid "If you are not using 2.7 already, please refer to the https://github.com/quarkusio/quarkus/wiki/Migration-Guide-2.7[2.7 migration guide]."
-msgstr "すでに2.7を使用していない場合は、 link:https://github.com/quarkusio/quarkus/wiki/Migration-Guide-2.7[2.7移行ガイド]を参照してください。"
+msgstr "まだ2.7を使用していない場合は、 link:https://github.com/quarkusio/quarkus/wiki/Migration-Guide-2.7[2.7移行ガイド]を参照してください。"
 
 #. type: Title ==
 #: upstream/_posts/2022-02-08-quarkus-2-7-1-final-released.adoc:17
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "What's new"
-msgstr "最新情報"
+msgstr "変更点"
 
 #. type: Title ===
 #: upstream/_posts/2022-02-08-quarkus-2-7-1-final-released.adoc:19
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Kogito extensions are back"
-msgstr "コギトエクステンションが復活"
+msgstr "Kogitoエクステンションが復活"
 
 #. type: Plain text
 #: upstream/_posts/2022-02-08-quarkus-2-7-1-final-released.adoc:23
-#, fuzzy
 msgid "2.7.1.Final reintroduces the Kogito extensions that were disabled for 2.7.0.Final due to an incompatibility.  So if you are using Kogito, you can now upgrade your applications to 2.7."
-msgstr "2.7.1.Finalでは、2.7.0.Finalでは非互換のために無効になっていたKogitoの拡張機能が再導入されています。そのため、Kogitoをお使いの方は、ご自分のアプリケーションを2.7にアップグレードすることができます。"
+msgstr "2.7.1.Finalでは、2.7.0.Finalでは非互換のために無効になっていたKogitoのエクステンションが再導入されています。そのため、Kogitoをお使いの方は、ご自分のアプリケーションを2.7にアップグレードすることができます。"
 
 #. type: Title ===
 #: upstream/_posts/2022-02-08-quarkus-2-7-1-final-released.adoc:24
@@ -86,21 +82,19 @@ msgstr "gRPC"
 
 #. type: Plain text
 #: upstream/_posts/2022-02-08-quarkus-2-7-1-final-released.adoc:28
-#, fuzzy
 msgid "Our gRPC extension only generated code for the application classes.  Starting with 2.7.1.Final, it also generates code from the dependencies."
-msgstr "私たちの gRPC 拡張機能は、アプリケーションクラスのコードのみを生成していました。2.7.1.Finalからは、依存関係からもコードを生成するようになりました。"
+msgstr "私たちの gRPC エクステンションは、アプリケーションクラスのコードのみを生成していました。2.7.1.Finalからは、依存関係からもコードを生成するようになりました。"
 
 #. type: Title ===
 #: upstream/_posts/2022-02-08-quarkus-2-7-1-final-released.adoc:29
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "OIDC token propagation"
 msgstr "OIDCトークンの伝搬"
 
 #. type: Plain text
 #: upstream/_posts/2022-02-08-quarkus-2-7-1-final-released.adoc:33
-#, fuzzy
 msgid "We introduced a reactive counterpart to the OIDC token propagation extension, that you can use with RESTEasy Reactive."
-msgstr "RESTEasy Reactiveで使用できる、OIDCトークンプロパゲーションエクステンションのリアクティブ対応版を紹介しました。"
+msgstr "RESTEasy Reactiveで使用できる、OIDCトークン伝搬エクステンションのリアクティブ対応版を導入しました。"
 
 #. type: Title ==
 #: upstream/_posts/2022-02-08-quarkus-2-7-1-final-released.adoc:34
@@ -110,9 +104,8 @@ msgstr "完全な変更履歴"
 
 #. type: Plain text
 #: upstream/_posts/2022-02-08-quarkus-2-7-1-final-released.adoc:37
-#, fuzzy
 msgid "You can get https://github.com/quarkusio/quarkus/releases/tag/2.7.1.Final[the full changelog of 2.7.1.Final on GitHub]."
-msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/2.7.1.Final[2.7.1.Finalの完全な変更履歴は、GitHubに]掲載されています。"
+msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/2.7.1.Final[2.7.1.Finalの完全な変更履歴] は、GitHubに掲載されています。"
 
 #. type: Title ==
 #: upstream/_posts/2022-02-08-quarkus-2-7-1-final-released.adoc:38
