--- a/l10n/po/ja_JP/_posts/2022-03-08-intellij-quarkus-tools-1.10.0.adoc.po
+++ b/l10n/po/ja_JP/_posts/2022-03-08-intellij-quarkus-tools-1.10.0.adoc.po
@@ -3,28 +3,28 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2022-03-08 18:12+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2022-04-06 10:11+0900\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #. type: Plain text
 #: upstream/_posts/2022-03-08-intellij-quarkus-tools-1.10.0.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "---\n"
 msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2022-03-08-intellij-quarkus-tools-1.10.0.adoc:8
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Quarkus Tools for IntelliJ 1.10.0 released!'\n"
@@ -38,27 +38,25 @@ msgstr ""
 "title: 'Quarkus Tools for IntelliJ 1.10.0リリース！'\n"
 "date: 2022-03-08\n"
 "tags: announcement ide\n"
-"synopsis: 「このリリースでは、Quarkusのラン/デバッグ設定のサポートが追加されました。\n"
+"synopsis: 'このリリースでは、Quarkusの実行/デバッグ構成のサポートが追加されました。'\n"
 "author: jeffmaury\n"
 "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2022-03-08-intellij-quarkus-tools-1.10.0.adoc:13
-#, fuzzy
 msgid "We are very pleased to announce the 1.10.0 release of Quarkus Tools for IntelliJ.  This release adds support for Quarkus run/debug configurations and provides several fixes (including security fixes)."
 msgstr "Quarkus Tools for IntelliJの1.10.0リリースを発表できることを大変嬉しく思っています。このリリースでは、Quarkusの実行／デバッグ構成のサポートが追加され、いくつかの修正（セキュリティ修正を含む）が行われています。"
 
 #. type: Title ==
 #: upstream/_posts/2022-03-08-intellij-quarkus-tools-1.10.0.adoc:14
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Quarkus configurations"
-msgstr "Quarkusのコンフィギュレーション"
+msgstr "Quarkusの構成"
 
 #. type: Plain text
 #: upstream/_posts/2022-03-08-intellij-quarkus-tools-1.10.0.adoc:18
-#, fuzzy
 msgid "It is possible to run or debug a Quarkus application from the IDE configurations.  Select the `Run -> Edit Configurations...` menu and click the `Add new...` link:"
-msgstr "IDE設定からQuarkusアプリケーションを実行またはデバッグすることができます。 `Run → Edit Configurations…​` メニューを選択し、 `Add new…​` リンクをクリックします。"
+msgstr "IDE構成からQuarkusアプリケーションを実行またはデバッグすることができます。 `Run → Edit Configurations…​` メニューを選択し、 `Add new…​` リンクをクリックします。"
 
 #. type: Target for macro image
 #: upstream/_posts/2022-03-08-intellij-quarkus-tools-1.10.0.adoc:19
@@ -68,9 +66,8 @@ msgstr "quarkus-tools1.png"
 
 #. type: Plain text
 #: upstream/_posts/2022-03-08-intellij-quarkus-tools-1.10.0.adoc:22
-#, fuzzy
 msgid "Select the `Quarkus` configuration type:"
-msgstr "`Quarkus` コンフィギュレーションタイプを選択します。"
+msgstr "`Quarkus` 構成タイプを選択します。"
 
 #. type: Target for macro image
 #: upstream/_posts/2022-03-08-intellij-quarkus-tools-1.10.0.adoc:23
@@ -80,15 +77,13 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2022-03-08-intellij-quarkus-tools-1.10.0.adoc:27
-#, fuzzy
 msgid "The first module of the project is selected. For single Quarkus projects, it is ok. If you have a multi module Quarkus project, you can change the module to test.  You can also specify a Quarkus profile to use (dev is the default) and environment variables (using the notation VARNAME=varvalue, separated by semicolon)"
 msgstr "プロジェクトの最初のモジュールが選択されます。単一のQuarkusプロジェクトの場合は、これでOKです。複数モジュールのQuarkusプロジェクトの場合は、モジュールをtestに変更することができます。また、使用するQuarkusプロファイル（devがデフォルト）と環境変数（VARNAME=varvalueの表記で、セミコロンで区切る）を指定することもできます。"
 
 #. type: Plain text
 #: upstream/_posts/2022-03-08-intellij-quarkus-tools-1.10.0.adoc:29
-#, fuzzy
 msgid "Then click the `OK` button. The configuration will now appear on the top right side of the window:"
-msgstr "次に、 `OK` ボタンをクリックします。これで、ウィンドウの右上にコンフィギュレーションが表示されます。"
+msgstr "次に、 `OK` ボタンをクリックします。これで、ウィンドウの右上に構成が表示されます。"
 
 #. type: Target for macro image
 #: upstream/_posts/2022-03-08-intellij-quarkus-tools-1.10.0.adoc:30
@@ -98,7 +93,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2022-03-08-intellij-quarkus-tools-1.10.0.adoc:33
-#, fuzzy
 msgid "If you click the Run icon, it will start the Quarkus application in dev mode. If you click the Debug button, it will start the Quarkus application in dev mode and connect a local Java debugger to the running application."
 msgstr "実行アイコンをクリックすると、Quarkusアプリケーションが開発モードで起動します。デバッグボタンをクリックすると、Quarkusアプリケーションが開発モードで起動し、実行中のアプリケーションにローカルのJavaデバッガが接続されます。"
 
@@ -132,9 +126,8 @@ msgstr "リンク"
 
 #. type: Plain text
 #: upstream/_posts/2022-03-08-intellij-quarkus-tools-1.10.0.adoc:47
-#, fuzzy
 msgid "GitHub repository: https://github.com/redhat-developer/intellij-quarkus"
-msgstr "GitHubリポジトリ https://github.com/redhat-developer/intellij-quarkus"
+msgstr "GitHubリポジトリ: https://github.com/redhat-developer/intellij-quarkus"
 
 #. type: Plain text
 #: upstream/_posts/2022-03-08-intellij-quarkus-tools-1.10.0.adoc:47
