--- a/l10n/po/ja_JP/_posts/2022-03-16-quarkus-2-7-5-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2022-03-16-quarkus-2-7-5-final-released.adoc.po
@@ -3,28 +3,28 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2022-03-16 13:21+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2022-04-06 10:12+0900\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #. type: Plain text
 #: upstream/_posts/2022-03-16-quarkus-2-7-5-final-released.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "---\n"
 msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2022-03-16-quarkus-2-7-5-final-released.adoc:8
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Quarkus 2.7.5.Final released - Maintenance release'\n"
@@ -44,7 +44,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2022-03-16-quarkus-2-7-5-final-released.adoc:11
-#, fuzzy
 msgid "Today, we released 2.7.5.Final which, as usual, only contains bugfixes and documentation improvements."
 msgstr "本日、2.7.5.Finalをリリースしましたが、例によってバグフィックスとドキュメントの改善のみが含まれています。"
 
@@ -66,7 +65,6 @@ msgstr "完全な変更履歴"
 
 #. type: Plain text
 #: upstream/_posts/2022-03-16-quarkus-2-7-5-final-released.adoc:19
-#, fuzzy
 msgid "You can get https://github.com/quarkusio/quarkus/releases/tag/2.7.5.Final[the full changelog of 2.7.5.Final on GitHub]."
 msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/2.7.5.Final[2.7.5.Final の完全な変更履歴は、GitHub で]入手できます。"
 
