--- a/l10n/po/ja_JP/_posts/2022-03-17-quarkus-newsletter-18.adoc.po
+++ b/l10n/po/ja_JP/_posts/2022-03-17-quarkus-newsletter-18.adoc.po
@@ -3,28 +3,28 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2022-03-17 20:11+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2022-04-06 10:13+0900\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #. type: Plain text
 #: upstream/_posts/2022-03-17-quarkus-newsletter-18.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "---\n"
 msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2022-03-17-quarkus-newsletter-18.adoc:9
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Quarkus Newsletter #18 - March'\n"
@@ -36,7 +36,7 @@ msgid ""
 "---\n"
 msgstr ""
 "layout: post\n"
-"title: 'クオークス ニュースレター #18 - 3月'\n"
+"title: 'Quarkus Newsletter #18 - 3月号'\n"
 "date: 2022-03-17\n"
 "tags: newsletter\n"
 "synopsis: Quarkusとその周辺に関する最新のオンラインストーリー、記事、ビデオなどをキュレーションしてお届けします。\n"
@@ -46,13 +46,11 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2022-03-17-quarkus-newsletter-18.adoc:13
-#, fuzzy
 msgid "The March newsletter has been sent. Learn about what's new with Java 17 and containers, read about LogicDrop and Vaadin's path to using Quarkus, and get a look at Continuous testing with Quarkus. Additionally, you'll get more insights into how Keycloak is ow fully cloud-native with Quarkus and learn how to create your first API with Kotlin and Quarkus. Also see the lastest Quarkus Insights episodes and upcoming Quarkus attended events."
 msgstr "3月号ニュースレターを配信しました。Java 17とコンテナの新機能、LogicDropとVaadinのQuarkus使用への道のり、Quarkusを使用した継続的テストについてご覧いただけます。さらに、KeycloakがQuarkusを使用して完全にクラウドネイティブになる方法と、KotlinとQuarkusを使用して最初のAPIを作成する方法について、より深く理解することができます。また、最新のQuarkus Insightsのエピソードや、Quarkusが参加する予定のイベントもご覧ください。"
 
 #. type: Plain text
 #: upstream/_posts/2022-03-17-quarkus-newsletter-18.adoc:15
-#, fuzzy
 msgid "Check out https://quarkus.io/newsletter/18/[Newsletter #18]!"
 msgstr "link:https://quarkus.io/newsletter/18/[Newsletter #18] をご覧ください。"
 
