Update .po files

--- a/l10n/po/ja_JP/_versions/main/guides/dev-services.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/dev-services.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-02-24 02:26+0000\n"
+"POT-Creation-Date: 2022-04-07 02:36+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -85,7 +85,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/dev-services.adoc:51
-msgid "Quarkus provides Dev Services for all databases it supports except Oracle. Most of these are run in a container, with the exception of H2 and Derby which are run in process. Dev Services are supported for both JDBC and reactive drivers."
+#, fuzzy
+#| msgid "Quarkus provides Dev Services for all databases it supports except Oracle. Most of these are run in a container, with the exception of H2 and Derby which are run in process. Dev Services are supported for both JDBC and reactive drivers."
+msgid "Quarkus provides Dev Services for all databases it supports. Most of these are run in a container, with the exception of H2 and Derby which are run in process. Dev Services are supported for both JDBC and reactive drivers."
 msgstr "Quarkusは、Oracleを除くサポートしているすべてのデータベースに対してDev Servicesを提供しています。これらのデータベースのほとんどはコンテナ内で実行されますが、H2とDerbyはプロセス内で実行されます。開発サービスは、JDBCドライバとリアクティブドライバの両方をサポートしています。"
 
 #. type: Title ==
