--- a/l10n/po/ja_JP/_versions/main/guides/vertx.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/vertx.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-03-04 02:33+0000\n"
+"POT-Creation-Date: 2022-04-07 02:36+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -675,7 +675,7 @@ msgstr ""
 #, fuzzy, no-wrap
 msgid ""
 "<1> Declaring a CDI Bean in the Application scope. Quarkus will create a single instance of this class.\n"
-"<2> Use the `@ConsumeEvent` annotation to declare a consumer. It is possible to use the Vert.x API directly too. TODO LINK REF\n"
+"<2> Use the `@ConsumeEvent` annotation to declare a consumer. It is possible to use the Vert.x API https://vertx.io/docs/vertx-core/java/#_acknowledging_messages_sending_replies[directly] too.\n"
 "<3> Receive the message payload as a method parameter. The returned object will be the reply.\n"
 "<4> Return the response. This response is sent back to the `VertxResource` class\n"
 msgstr ""
