--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-oidc-oidc-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-oidc-oidc-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-04-07 02:41+0000\n"
+"POT-Creation-Date: 2022-04-09 02:34+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1577,7 +1577,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-oidc-oidc-config.adoc:869
 #: upstream/_generated-config/main/config/quarkus-oidc-oidc-config.adoc:1800
 #, no-wrap
-msgid "`apple`, `facebook`, `github`, `google`, `microsoft`, `twitter`"
+msgid "`apple`, `facebook`, `github`, `google`, `microsoft`, `spotify`, `twitter`"
 msgstr ""
 
 #. type: Table
