Update .po files

--- a/l10n/po/ja_JP/_versions/main/guides/security-jwt-build.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/security-jwt-build.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-03-04 02:33+0000\n"
+"POT-Creation-Date: 2022-04-10 02:32+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -68,7 +68,7 @@ msgstr "pom.xml"
 msgid ""
 "<dependency>\n"
 "    <groupId>io.quarkus</groupId>\n"
-"    <artifactId></artifactId>\n"
+"    <artifactId>quarkus-smallrye-jwt-build</artifactId>\n"
 "</dependency>\n"
 msgstr ""
 
