--- a/l10n/po/ja_JP/_versions/main/guides/security-openid-connect-client.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/security-openid-connect-client.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-03-04 02:33+0000\n"
+"POT-Creation-Date: 2022-04-10 02:32+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1221,12 +1221,12 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-openid-connect-client.adoc:641
-msgid "Some OpenID Connect Providers may require that a client is authenticated as part of the `Mutual TLS` (`MTLS`) authentication process."
+msgid "Some OpenID Connect Providers may require that a client is authenticated as part of the `Mutual TLS` (`mTLS`) authentication process."
 msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-openid-connect-client.adoc:643
-msgid "`quarkus-oidc-client` can be configured as follows to support `MTLS`:"
+msgid "`quarkus-oidc-client` can be configured as follows to support `mTLS`:"
 msgstr ""
 
 #. type: delimited block -
